syntax = "proto3";

option csharp_namespace = "PrimeNumberVerificationService.Protos";

package primenum.v1;

service PrimeNumberVerificator {
	rpc ValidateNumber (PrimeNumberRequest) returns (PrimeNumberReply);
}

message PrimeNumberRequest {
	int64 id = 1;
	int64 timestamp = 2;
	int64 number = 3;
}

message PrimeNumberReply {
	bool valid = 1;
}